--- a/source/TStepRunner.cls
+++ b/source/TStepRunner.cls
@@ -15,7 +15,7 @@ Public Sub setup(Session As TSession)
     Set m_session = Session
 End Sub
 
-Public Function run_step(step_definition As TStep, Optional silent) As Variant
+Public Function run_step(step_definition As TStep) As Variant
 
     Dim step_result As Variant
     Dim step_implementation_class As Variant
@@ -23,7 +23,6 @@ Public Function run_step(step_definition As TStep, Optional silent) As Variant
     Dim step_run_attempts As Integer
     
     On Error GoTo error_handler
-    If IsMissing(silent) Then silent = False
     step_run_attempts = 0
     step_function_name = step_definition.get_step_function_name
     For Each step_implementation_class In TConfig.StepImplementations
@@ -31,7 +30,7 @@ Public Function run_step(step_definition As TStep, Optional silent) As Variant
         step_result = try_step(step_implementation_class, step_function_name, step_definition.Expressions)
     Next
     If step_run_attempts = TConfig.StepImplementations.Count Then
-        run_step = fail_step(ERR_ID_STEP_IS_STATUS_MISSING, step_definition.get_step_function_template, silent)
+        run_step = fail_step(ERR_ID_STEP_IS_STATUS_MISSING, step_definition.get_step_function_template)
     Else
         run_step = Array(STATUS_OK)
     End If
@@ -42,7 +41,7 @@ error_handler:
         step_run_attempts = step_run_attempts + 1
         Resume Next
     Else
-        run_step = fail_step(Err.Number, Err.Description, silent)
+        run_step = fail_step(Err.Number, Err.Description)
     End If
 End Function
 
@@ -58,7 +57,7 @@ Private Function try_step(step_implementation_class As Variant, step_function_na
     try_step = step_result
 End Function
 
-Public Function fail_step(err_id As Long, Optional err_msg, Optional silent) As Variant
+Public Function fail_step(err_id As Long, Optional err_msg) As Variant
  
     Dim err_desc As String
     
@@ -67,13 +66,12 @@ Public Function fail_step(err_id As Long, Optional err_msg, Optional silent) As 
     Else
         err_desc = err_msg
     End If
-    If IsMissing(silent) Then silent = False
     Select Case err_id
     Case ERR_ID_STEP_IS_STATUS_PENDING
         fail_step = Array(STATUS_PENDING, err_desc)
     Case ERR_ID_STEP_IS_STATUS_MISSING
         fail_step = Array(STATUS_MISSING, vbNullString)
-        If Not silent Then m_session.Reporter.report REPORT_MSG_TYPE_CODE_TEMPLATE, err_desc
+        m_session.Reporter.report REPORT_MSG_TYPE_CODE_TEMPLATE, err_desc
     Case Else
         fail_step = Array(STATUS_FAIL, err_desc & vbLf & TSpec.LastFailMsg)
     End Select
