[feature] add a hint when Senfgurke recommends adding a step function already available

--- a/source/TReport.cls
+++ b/source/TReport.cls
@@ -105,6 +105,10 @@ Public Function get_code_templates_for_missing_steps() As String
         For Each template In m_code_template_buffer
             report_output = report_output & vbLf & vbLf & CStr(template)
         Next
+        report_output = report_output & vbLf & vbLf & "If the function is already in place, the cause for this message could be:" & vbLf _
+                            & "* the step implementation class is not registered in TConfig.StepImplementations" & vbLf _
+                            & "* the code inside the step function tries to access a non-existing method or property"
+                            
     End If
     get_code_templates_for_missing_steps = report_output
 End Function
